commit for adding garbage collection ntoes